Update stylesheet colours

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 Felix de Boer
 </span>
 <div id="hline"></div>
-<p>Hi, I am a student in Applied Physics (MSc) at Delft University of Technology.</p>
+<p>Welcome to my personal website.</p>
 <noscript>
 	<div style="background: #cc0000; padding: 1em; font-weight: bold; color: white; max-width: 100%; display: inline-block; margin-bottom: 1em;">
-	</br>It seems like JavaScript is not enabled or supported by your browser. The menu does not work now because it uses JavaScript to expand. Enable JavaScript or use a different device to view this page.
+	<br>It seems like JavaScript is not enabled or supported by your browser. The menu does not work now because it uses JavaScript to expand. Enable JavaScript or use a different device to view this page.
 	</div>
 </noscript>
 <div id="home_menu">
@@ -50,13 +50,15 @@ Felix de Boer
 <a href="#" id="resume_parent"><div>Resume</div></a>
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
-<div id="posts_expand" class="expand" style="padding: 0; background: none;">
+<div id="posts_expand" class="expand" style="padding: 0;">
 	<a href="res/other/Thorium_as_fuel_in_molten_salt_reactors_2018.pdf">
 	<div class="spotlight"><div class="spotlight_text"><h2>Thorium as a fuel in molten salt reactors (PDF)</h2>
 	An essay giving an overview on thorium fueled molten salt reactors: how they work and what issues need to be solved to commercialize them.</div>
 	<div class="spotlight_media"><img src="res/photo/index/blank.png"/></div>
-	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
-	I like to customize my Android homescreens. Some examples from the past years.</div>
+	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text">
+	<h2>Homescreens</h2>
+	Some Android homescreens from the past years.
+	</div>
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
 	</div></a><a href="page/archive.html" style="margin-bottom: 5em;"><div class="spotlight"><h1 style="vertical-align: center; text-align: center;">more posts</h1>
 	</div></a>
@@ -64,26 +66,6 @@ Felix de Boer
 <div id="resume_expand" class="expand">
 	<h1>Resume</h1>
 	<p>View on <a href="https://www.linkedin.com/in/fqdeboer/">LinkedIn</a>.</p>
-	<!--<h2>Relevant work experience</h2>
-	<h3>Some company</h3>
-	<p><i>2018-</i></br></p>
-	<p>Some text</p>
-	<h2>Education</h2>
-	<h3>Exchange semester, Technical Univerisity of Denmark</h3>
-	<p><i>Spring 2016</i></p>
-	<p>At <a href="http://www.dtu.dk/">Danmarks Tekniske Universitet</a> (DTU) I am doing an exchange semester to follow some courses not available at TU Delft, to see DTU's area of expertise, and to experience Denmark.</p>
-	<h4>Courses</h4>
-	<ul><li>Experimental Surface Physics</li><li>Hydrogen Energy and Fuel Cells</li><li>Magnetism and Magnetic Materials (jointly given at <a href="http://www.ku.dk/">KU</a>)</li><li>Advanced Matlab Programming</li></ul>
-	<h3>Master Applied Physics, Delft University of Technology</h3>
-	<p><i>2015-</i></br></p>
-	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
-	<p><i>2012-2015</i></br>
-	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
-	</p>
-	<p>
-	<a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/"><img src="res/photo/resume/cover.jpg" style="max-width: 50%"></a>
-	</p>-->
-
 </div>
 <div id="contact_expand" class="expand">
 	<h1>Contact</h1>
